서식 태그 - 강조

--- a/src/FC/06_tag.html
+++ b/src/FC/06_tag.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>서식 관련 목록</title>
 </head>
 <body>
-    
+    <!-- html에서 주석 처리 방법 -->
+    <ul>
+        <li>사과</li>
+        <li>수박</li>
+        <li>딸기</li>
+    </ul>
+
+    <!-- cmd + / 자동 주석 처리를 해준다. -->
+    <ol>
+        <li>메가박스</li>
+        <li>롯데시네마</li>
+        <li>씨지브이</li>
+    </ol>
+
+    <dl>
+        <dt>파리</dt>
+        <dd>파리는 유럽에 위치해 있으며..</dd>
+
+        <dt>런던</dt>
+        <dd>섬나라..</dd>
+    </dl>
 </body>
 </html>
