--- a/src/FC/index2.html
+++ b/src/FC/index2.html
@@ -6,21 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS 연결하기</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style2.css">
     <!-- link.css 치면 자동 불러오기가 가능하다. -->
 </head>
 
 <body>
-    <div>
-        <ul>
-            <li>
-                <a href="">목록1</a>
-            </li>
-            <li>목록2</li>
-        </ul>
-
-        <a href="#">Link</a>
-    </div>
+    <ul>
+        <li>목록1</li>
+        <li>목록2</li>
+        <li>목록3</li>
+        <li>목록4</li>
+        <li>목록5</li>
+    </ul>
 </body>
 
 </html>
