--- a/src/FC/index8.html
+++ b/src/FC/index8.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>블록, 인라인요소 특징</title>
+    <link rel="stylesheet" href="css/style8.css">
 </head>
+
 <body>
     <!-- 블록요소: 특정 영역을 블록 쌓듯이 레이아웃 -->
     <!-- 인라인요소: 특정 구문에서 기능이나 디자인 효과를 줄 때 사용 -->
-    
+    <!-- strong과 같이 html에 내에서 속성값을 주는 경우를 인라인요소라고 한다. -->
+    <div>
+        <h1>제목</h1>
+        <p><strong>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore inventore magni nesciunt perferendis eveniet vero repudiandae corporis atque nisi officiis, eum placeat ad quidem dolorem quaerat reiciendis praesentium debitis dolor.</strong>, ipsum dolor sit amet consectetur adipisicing elit. Ad reprehenderit eaque modi? Itaque minima officia
+            quis necessitatibus sed vitae earum perferendis odio blanditiis libero! Enim quo, rem animi laborum aliquid
+            ipsam et laboriosam doloremque hic provident autem adipisci libero in!
+        </p>
+        <ul>
+            <li>목록</li>
+            <li>목록2</li>
+        </ul>
+    </div>
 </body>
+
 </html>
